add keys, projects to sample config

--- a/config.sample.cfg
+++ b/config.sample.cfg
@@ -3,3 +3,26 @@ api_token = <TOGGL API TOKEN>
 
 [device]
 input_device = <PATH/TO/INPUT/DEVICE>
+
+[keys]
+KEY0 = 11
+KEY1 = 2
+KEY2 = 3
+KEY3 = 4
+KEY4 = 5
+KEY5 = 6
+KEY6 = 7
+KEY7 = 8
+KEY8 = 9
+KEY9 = 10
+
+[projects]
+PROJ1 = 1
+PROJ2 = 1
+PROJ3 = 1
+PROJ4 = 1
+PROJ5 = 1
+PROJ6 = 1
+PROJ7 = 1
+PROJ8 = 1
+PROJ9 = 1
