--- a/config.sample.cfg
+++ b/config.sample.cfg
@@ -5,24 +5,14 @@ api_token = <TOGGL API TOKEN>
 input_device = <PATH/TO/INPUT/DEVICE>
 
 [keys]
-0 = 11
+stop = 11
 1 = 2
 2 = 3
 3 = 4
 4 = 5
-5 = 6
-6 = 7
-7 = 8
-8 = 9
-9 = 10
 
 [projects]
-1 = 1
-2 = 1
-3 = 1
-4 = 1
-5 = 1
-6 = 1
-7 = 1
-8 = 1
-9 = 1
+1 = <PROJECT ID>
+2 = <PROJECT ID>
+3 = <PROJECT ID>
+4 = <PROJECT ID>
