--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "TogglPy"]
 	path = TogglPy
-	url = https://github.com/matthewdowney/TogglPy
+	url = https://github.com/fonorobert/TogglPy
