first pass at reorganizing config into dict, doesn't work yet

--- a/config.sample.cfg
+++ b/config.sample.cfg
@@ -12,8 +12,8 @@ stop = 11
 3 = 4
 4 = 5
 
-[projects]
-1 = <PROJECT ID>
-2 = <PROJECT ID>
-3 = <PROJECT ID>
-4 = <PROJECT ID>
+[timers]
+1 = {"projectid": <PROJECT ID>, "taskid": <TASK ID>, "description": "<DESCRIPTION>"}
+2 = {"projectid": <PROJECT ID>, "taskid": <TASK ID>, "description": "<DESCRIPTION>"}
+3 = {"projectid": <PROJECT ID>, "taskid": <TASK ID>, "description": "<DESCRIPTION>"}
+4 = {"projectid": <PROJECT ID>, "taskid": <TASK ID>, "description": "<DESCRIPTION>"}
